--- a/next/templates/app-deployment.yaml
+++ b/next/templates/app-deployment.yaml
@@ -58,6 +58,11 @@ spec:
                 secretKeyRef:
                   name: my-app-secrets
                   key: email-server-password
+            - name: OPENAI_API_KEY
+            valueFrom:
+              secretKeyRef:
+                name: openai-secret       # 1. で作成したSecret名
+                key: OPENAI_API_KEY    # Secret内のキー名
         
         # -------------------------
         # コンテナ2: Prismaマイグレーション用 (Migrator)
