--- a/next/templates/job-migrate.yaml
+++ b/next/templates/job-migrate.yaml
@@ -23,7 +23,7 @@ spec:
       restartPolicy: Never
       containers:
         - name: migrator
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}-migrator"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           workingDir: /app # ★注意: Dockerイメージ内の作業ディレクトリ
           command: {{ .Values.migration.command | toYaml | nindent 12 }}
@@ -57,7 +57,7 @@ metadata:
     "helm.sh/hook-weight": "5"
 spec:
   backoffLimit: 1
-  activeDeadlineSeconds: 300
+  activeDeadlineSeconds: 1200
   template:
     metadata:
       labels:
@@ -66,7 +66,7 @@ spec:
       restartPolicy: Never
       containers:
         - name: seeder
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}-migrator"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           workingDir: /app # ★注意: Dockerイメージ内の作業ディレクトリ
           command: {{ .Values.seeding.command | toYaml | nindent 12 }}
