--- a/next/templates/sandbox-service.yaml
+++ b/next/templates/sandbox-service.yaml
@@ -1,4 +1,5 @@
 # templates/sandbox-service.yaml
+
 {{- if .Values.sandbox.enabled -}}
 apiVersion: v1
 kind: Service
@@ -10,6 +11,73 @@ spec:
     app: {{ .Values.releaseName }}-sandbox
   ports:
     - protocol: TCP
-      port: 80 # Serviceのポート (Next.jsからはここを叩く)
-      targetPort: {{ .Values.sandbox.service.port }} # コンテナの実ポート
+      port: 80 # Serviceのポート (Next.jsからは http://...svc:80 でアクセス)
+      targetPort: {{ .Values.sandbox.service.port }} # コンテナの実ポート (4000)
+{{- end }}
+
+--- # ★★★ これが重要！リソースの区切り線 ★★★
+
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: sandbox-deny-egress
+  namespace: {{ .Values.namespace }}
+spec:
+  podSelector:
+    matchLabels:
+      app: {{ .Values.releaseName }}-sandbox
+  policyTypes:
+    - Egress
+  egress:
+    # DNS (UDP/TCP 53) のみ許可
+    - ports:
+        - port: 53
+          protocol: UDP
+        - port: 53
+          protocol: TCP
+
+--- # ★★★ これが重要！リソースの区切り線 ★★★
+
+{{- if .Values.sandbox.enabled -}}
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: {{ .Values.releaseName }}-sandbox
+  namespace: {{ .Values.namespace }}
+  labels:
+    app: {{ .Values.releaseName }}-sandbox
+spec:
+  replicas: {{ .Values.sandbox.replicaCount }}
+  selector:
+    matchLabels:
+      app: {{ .Values.releaseName }}-sandbox
+  template:
+    metadata:
+      labels:
+        app: {{ .Values.releaseName }}-sandbox
+    spec:
+      # gVisorの設定（有効な場合のみ）
+      {{- if .Values.sandbox.gvisor.enabled }}
+      runtimeClassName: gvisor
+      {{- end }}
+
+      containers:
+        - name: sandbox
+          # イメージ名: ...-sandbox
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}{{ .Values.sandbox.image.tagSuffix }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          ports:
+            # コンテナのポート (4000)
+            - containerPort: {{ .Values.sandbox.service.port }}
+          securityContext:
+            allowPrivilegeEscalation: false
+            readOnlyRootFilesystem: false # 一時ファイル書き込みのためfalse推奨、または/tmpをemptyDirでマウント
+          volumeMounts:
+            - name: tmp-volume
+              mountPath: /tmp
+          resources:
+            {{- toYaml .Values.sandbox.resources | nindent 12 }}
+      volumes:
+        - name: tmp-volume
+          emptyDir: {}
 {{- end }}
