--- a/next/templates/sandbox-service.yaml
+++ b/next/templates/sandbox-service.yaml
@@ -1,5 +1,3 @@
-# templates/sandbox-service.yaml
-
 {{- if .Values.sandbox.enabled -}}
 apiVersion: v1
 kind: Service
@@ -11,6 +9,68 @@ spec:
     app: {{ .Values.releaseName }}-sandbox
   ports:
     - protocol: TCP
-      port: 80 # Serviceのポート (Next.jsからは http://...svc:80 でアクセス)
-      targetPort: {{ .Values.sandbox.service.port }} # コンテナの実ポート (4000)
+      port: 80
+      targetPort: {{ .Values.sandbox.service.port }}
+{{- end }}
+
+---
+
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: sandbox-deny-egress
+  namespace: {{ .Values.namespace }}
+spec:
+  podSelector:
+    matchLabels:
+      app: {{ .Values.releaseName }}-sandbox
+  policyTypes:
+    - Egress
+  egress:
+    - ports:
+        - port: 53
+          protocol: UDP
+        - port: 53
+          protocol: TCP
+
+---
+
+{{- if .Values.sandbox.enabled -}}
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: {{ .Values.releaseName }}-sandbox
+  namespace: {{ .Values.namespace }}
+  labels:
+    app: {{ .Values.releaseName }}-sandbox
+spec:
+  replicas: {{ .Values.sandbox.replicaCount }}
+  selector:
+    matchLabels:
+      app: {{ .Values.releaseName }}-sandbox
+  template:
+    metadata:
+      labels:
+        app: {{ .Values.releaseName }}-sandbox
+    spec:
+      {{- if .Values.sandbox.gvisor.enabled }}
+      runtimeClassName: gvisor
+      {{- end }}
+      containers:
+        - name: sandbox
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}{{ .Values.sandbox.image.tagSuffix }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          ports:
+            - containerPort: {{ .Values.sandbox.service.port }}
+          securityContext:
+            allowPrivilegeEscalation: false
+            readOnlyRootFilesystem: false
+          volumeMounts:
+            - name: tmp-volume
+              mountPath: /tmp
+          resources:
+            {{- toYaml .Values.sandbox.resources | nindent 12 }}
+      volumes:
+        - name: tmp-volume
+          emptyDir: {}
 {{- end }}
