--- a/next/templates/job-migrate.yaml
+++ b/next/templates/job-migrate.yaml
@@ -26,7 +26,8 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}-migrator"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           workingDir: /app # ★注意: Dockerイメージ内の作業ディレクトリ
-          command: {{ .Values.migration.command | toYaml | nindent 12 }}
+          command:
+            {{- .Values.migration.command | toYaml | nindent 12 }}
           env:
             - name: PG_USER
               value: {{ .Values.postgresql.user | quote }}
@@ -41,45 +42,46 @@ spec:
               value: "postgresql://$(PG_USER):$(PG_PASSWORD)@{{ .Release.Name }}-postgresql:5432/$(PG_DB_NAME)?schema=public"
 {{- end }}
 ---
-# {{- if .Values.seeding.enabled -}}
-# apiVersion: batch/v1
-# kind: Job
-# metadata:
-#   name: {{ .Release.Name }}-seed-job
-#   namespace: {{ .Values.namespace }}
-#   labels:
-#     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-#     app.kubernetes.io/managed-by: {{ .Release.Service }}
-#     app.kubernetes.io/instance: {{ .Release.Name }}
-#   annotations:
-#     "helm.sh/hook": "post-install,post-upgrade"
-#     "helm.sh/hook-delete-policy": "hook-succeeded,before-hook-creation"
-#     "helm.sh/hook-weight": "5"
-# spec:
-#   backoffLimit: 1
-#   activeDeadlineSeconds: 1200
-#   template:
-#     metadata:
-#       labels:
-#         job-name: {{ .Release.Name }}-seed-job
-#     spec:
-#       restartPolicy: Never
-#       containers:
-#         - name: seeder
-#           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}-migrator"
-#           imagePullPolicy: {{ .Values.image.pullPolicy }}
-#           workingDir: /app # ★注意: Dockerイメージ内の作業ディレクトリ
-#           command: {{ .Values.seeding.command | toYaml | nindent 12 }}
-#           env:
-#             - name: PG_USER
-#               value: {{ .Values.postgresql.user | quote }}
-#             - name: PG_DB_NAME
-#               value: {{ .Values.postgresql.database | quote }}
-#             - name: PG_PASSWORD
-#               valueFrom:
-#                 secretKeyRef:
-#                   name: {{ .Release.Name }}-postgresql
-#                   key: password
-#             - name: DATABASE_URL
-#               value: "postgresql://$(PG_USER):$(PG_PASSWORD)@{{ .Release.Name }}-postgresql:5432/$(PG_DB_NAME)?schema=public"
+{{- if .Values.seeding.enabled -}}
+apiVersion: batch/v1
+kind: Job
+metadata:
+  name: {{ .Release.Name }}-seed-job
+  namespace: {{ .Values.namespace }}
+  labels:
+    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+  annotations:
+    "helm.sh/hook": "post-install,post-upgrade"
+    "helm.sh/hook-delete-policy": "hook-succeeded,before-hook-creation"
+    "helm.sh/hook-weight": "5"
+spec:
+  backoffLimit: 1
+  activeDeadlineSeconds: 1200
+  template:
+    metadata:
+      labels:
+        job-name: {{ .Release.Name }}-seed-job
+    spec:
+      restartPolicy: Never
+      containers:
+        - name: seeder
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}-migrator"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          workingDir: /app # ★注意: Dockerイメージ内の作業ディレクトリ
+          command:
+            {{- .Values.seeding.command | toYaml | nindent 12 }}
+          env:
+            - name: PG_USER
+              value: {{ .Values.postgresql.user | quote }}
+            - name: PG_DB_NAME
+              value: {{ .Values.postgresql.database | quote }}
+            - name: PG_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Release.Name }}-postgresql
+                  key: password
+            - name: DATABASE_URL
+              value: "postgresql://$(PG_USER):$(PG_PASSWORD)@{{ .Release.Name }}-postgresql:5432/$(PG_DB_NAME)?schema=public"
 {{- end }}
