--- a/next/templates/sandbox-deployment.yaml
+++ b/next/templates/sandbox-deployment.yaml
@@ -7,6 +7,7 @@ metadata:
   labels:
     app: {{ .Values.releaseName }}-sandbox
 spec:
+  revisionHistoryLimit: 1
   replicas: {{ .Values.sandbox.replicaCount }}
   selector:
     matchLabels:
