--- a/next/templates/ingress.yaml
+++ b/next/templates/ingress.yaml
@@ -7,6 +7,7 @@ metadata:
     {{- include "next.labels" . | nindent 4 }}
   annotations:
     cert-manager.io/cluster-issuer: {{ .Values.ingress.clusterIssuer }}
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   ingressClassName: "nginx"
   rules:
