--- a/next/templates/ingress.yaml
+++ b/next/templates/ingress.yaml
@@ -1,27 +1,47 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: {{ .Values.releaseName }}-{{ .Values.appName }}
-  namespace: {{ .Values.namespace }}
+  name: cloudflared
+  namespace: tss-pre
   labels:
-    {{- include "next.labels" . | nindent 4 }}
-  annotations:
-    cert-manager.io/cluster-issuer: {{ .Values.ingress.clusterIssuer }}
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    app: cloudflared
 spec:
-  ingressClassName: "nginx"
-  rules:
-    - host: {{ .Values.ingress.host }}
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: {{ .Values.releaseName }}-{{ .Values.appName }}
-                port:
-                  number: 80
-  tls:
-    - hosts:
-        - {{ .Values.ingress.host }}
-      secretName: {{ .Values.ingress.tlsSecretName }}
+  replicas: 2
+  selector:
+    matchLabels:
+      app: cloudflared
+  template:
+    metadata:
+      labels:
+        app: cloudflared
+    spec:
+      containers:
+      - name: cloudflared
+        image: cloudflare/cloudflared:latest
+        args:
+        - tunnel
+        # ▼ 【追加】ヘルスチェック用のポートを明示的に開く
+        - --metrics
+        - 0.0.0.0:2000
+        - run
+        env:
+        - name: TUNNEL_TOKEN
+          valueFrom:
+            secretKeyRef:
+              name: tunnel-credentials
+              key: token
+        livenessProbe:
+          httpGet:
+            path: /ready
+            port: 2000
+          # ▼ 【変更】起動まで少し待ってあげる (1秒→10秒)
+          initialDelaySeconds: 10
+          periodSeconds: 10
+          failureThreshold: 3
+        resources:
+          requests:
+            cpu: 50m
+            memory: 128Mi
+          limits:
+            cpu: 500m
+            memory: 512Mi
