--- a/next/templates/ingress.yaml
+++ b/next/templates/ingress.yaml
@@ -1,49 +1,27 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
-  name: cloudflared
-  namespace: tss-pre
+  name: {{ .Values.releaseName }}-{{ .Values.appName }}
+  namespace: {{ .Values.namespace }}
   labels:
-    app: cloudflared
+    {{- include "next.labels" . | nindent 4 }}
+  annotations:
+    cert-manager.io/cluster-issuer: {{ .Values.ingress.clusterIssuer }}
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
-  replicas: 2
-  selector:
-    matchLabels:
-      app: cloudflared
-  template:
-    metadata:
-      labels:
-        app: cloudflared
-    spec:
-      containers:
-      - name: cloudflared
-        image: cloudflare/cloudflared:latest
-        args:
-        - tunnel
-        # ▼▼▼ 【重要】この2行を追加してください ▼▼▼
-        # これがないとポート2000が開かず、Liveness Probeが失敗します
-        - --metrics
-        - 0.0.0.0:2000
-        # ▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲
-        - run
-        env:
-        - name: TUNNEL_TOKEN
-          valueFrom:
-            secretKeyRef:
-              name: tunnel-credentials
-              key: token
-        livenessProbe:
-          httpGet:
-            path: /ready
-            port: 2000
-          # ▼▼▼ 起動直後の失敗を防ぐため、時間を延ばします ▼▼▼
-          initialDelaySeconds: 10
-          periodSeconds: 10
-          failureThreshold: 3
-        resources:
-          requests:
-            cpu: 50m
-            memory: 128Mi
-          limits:
-            cpu: 500m
-            memory: 512Mi
+  ingressClassName: "nginx"
+  rules:
+    - host: {{ .Values.ingress.host }}
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: {{ .Values.releaseName }}-{{ .Values.appName }}
+                port:
+                  number: 80
+  tls:
+    - hosts:
+        - {{ .Values.ingress.host }}
+      secretName: {{ .Values.ingress.tlsSecretName }}
